--- a/app/assets/templates/shared/landing.jst.ejs
+++ b/app/assets/templates/shared/landing.jst.ejs
@@ -1,10 +1,13 @@
 
 <section class="landing">
+    <div class="landing-text">
+      <h3>TAKE A HIKE</h3>
+      <h4>Find new campsites in over 3 states</h4>
+    </div>
   <section class="sublanding">
 
 
 
-    </section>
   </section>
 </section>
 
