--- a/app/assets/templates/shared/landing.jst.ejs
+++ b/app/assets/templates/shared/landing.jst.ejs
@@ -2,7 +2,7 @@
 <section class="landing">
     <div class="landing-text">
       <h3>TAKE A HIKE</h3>
-      <h4>Find new campsites in over 3 states</h4>
+      <h4>Find new campsites in the United States</h4>
     </div>
   <section class="sublanding">
 
