css fix, pre signup change commit

--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -18,6 +18,9 @@ div.landing-text > h3 {
 div.landing-text > h4 {
   font-size: 19px;
   color: white;
+  position: absolute;
+  left: -17px;
+  width: 350px;
 }
 
 section.landing {
